--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>Lorem ipsum dolor sit amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <button>Submit</button>
 </body>
 </html>
